2002-07-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oleauto.h (V_BOOL): Define in terms of boolVal,
	not bool, for C as well as C++.

2002-07-22  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlwapi.h: New file.
	Thanks to: Mattia Barbon  <mbarbon@dsi.unive.it> and
	Victor Porton  <porton@narod.ru> for contributions.
	* lib/shlwapi.def: New file.
	* lib/test.c: #include shlwapi.h.

2002-07-21  Bart Oldeman  <bart.oldeman@btinternet.com>

	* include/shlobj.h (FCIDM_MENU_FAVORITES): Remove bogus
	character.
	* include/winsock2.h (struct sockaddr): Use __int64 instead of
	long long.
	* include/kernel32.c (GetCurrentFiber, GetFiberData): Watcom
	does not need external *Fiber library functions.

2002-07-20  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* include/winbase.h (GetEnvironmentStringsA): Remove duplicate
	definition.
	(Interlocked*): Wrap in #ifndef __INTERLOCKED_DECLARED to
	avoid compile error when already defined.

2002-07-20  Steven Edwards  <Steven_Ed4153@yahoo.com>

	* include/winuser.h (WM_MENURBUTTONUP): Add define.

2002-07-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commdlg.h: Define CDN_* notification message constants
	as UINT.

2002-07-17  Mattia Barbon  <mbarbon@users.sourceforge.net>

	* include/commctrl.h: Define notification message constants for
	NMHDR.code as UINT.

2002-07-17   Bart Oldeman  <bart.oldeman@btinternet.com>

	* include/ddeml.h (MH_*) Add defines.
	(MONHSZSTRUCT): Add structure and typedefs.
	(MONLINKSTRUCT): Ditto.
	(MONCONVSTRUCT): Ditto.
	(MONCBSTRUCT): Ditto.
	(MONERRSTRUCT): Ditto.
	(MONMSGSTRUCT): Ditto.
	* include/windef.h: Don't define __cdecl or _cdecl for
	__WATCOM__.
	Don't define _export or __export for __WATCOM__.
	* include/windows.h (imm.h): #include.
	* include/winnt.h (LPEXCEPTION_RECORD): Add typedef.

2002-07-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wtypes.h: Remove duplicate #includes of rpc.h and
	rpcndr.h.
